--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "empire-state-colors"
 version = "0.1.0"
 edition = "2021"
+authors = [ "Sebastian Klose" ]
 
 # Starting in Rust 1.62 you can use `cargo add` to add dependencies 
 # to your project.
