--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,14 +7,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
       - name: Install cargo lambda
         run: |
           python -m pip install --upgrade pip
           pip install cargo-lambda
         shell: bash
       - name: Build lambda function
-        run: |
-          cd ${{ inputs.lambda_directory }}
-          cargo lambda build --release --arm64
+        run: cargo lambda build --release --arm64
         shell: bash
