--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,5 +21,5 @@ jobs:
           pip install cargo-lambda
         shell: bash
       - name: Build lambda function
-        run: cargo lambda build --release --arm64
+        run: OPENSSL_DIR=/usr/local/ssl cargo lambda build --release --arm64
         shell: bash
