--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,13 +13,11 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - name: Install Build Dependencies
-        run: sudo apt-get update && sudo apt-get install pkg-config libssl-dev
       - name: Install cargo lambda
         run: |
           python -m pip install --upgrade pip
           pip install cargo-lambda
         shell: bash
       - name: Build lambda function
-        run: OPENSSL_DIR=/usr/local/ssl cargo lambda build --release --arm64
+        run: cargo lambda build --release --arm64
         shell: bash
